--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
 <html>
+	<head>
+		<title>WAN IZZATI</title>
+	</head>
+<body>
+<h1>Wan Izzati Binti Wan Muzamil</h1>
+<h2>2019738499</h2>
+<h3>BA240 5C</h3)
+</body>
+</html>
